--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600|Roboto Mono' rel='stylesheet' type='text/css'>
-  <title>Tensorflow.js YoloV3</title>
+  <title>Document</title>
 </head>
 <body class="">
   <h1 class="title">Tensorflow.js</a> <a href="https://pjreddie.com/darknet/yolo/"><font>YoloV3</font></a></h1>
@@ -23,7 +23,7 @@
         <span class="upload-img">Try your own picture</span>
     </label>
     <div id="img-box">
-      <img  src="" id="img" />
+      <img  src="/images/5.jpg" id="img" />
       <div id="rect-box"></div>
     </div>
     <ul class="examples">
@@ -41,6 +41,6 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
-  <script src="./dist/index.bundle.js"></script>
+  <script src="/index.bundle.js"></script>
 </body>
 </html>
