--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
         <div></div>
         <div></div>
       </div>
-      <p>Loading Model (248M)</p>
+      <p>Loading Model (248M) <font id="progress"></font></p>
       <p class="tip">This may take a few minutes, depending on your network. You can check the progress in the console.</p>
   </div>
   <div class="content">
