feat: add YOLOv3-tiny DEMO

--- a/index.html
+++ b/index.html
@@ -5,17 +5,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600|Roboto Mono' rel='stylesheet' type='text/css'>
-  <title>Tensorflow.js YoloV3</title>
+  <title>Document</title>
 </head>
 <body class="">
   <h1 class="title">Tensorflow.js</a> <a href="https://pjreddie.com/darknet/yolo/"><font>YoloV3</font></a></h1>
+
+  <div class="button-group">
+    <span class="button" id="button1">YOLOv3 DEMO (248M)</span>
+    <span class="button" id="button2">YOLOv3-tiny DEMO (35M)</span>
+  </div>
+
   <div class="loading-box">
       <div id="loading">
         <div></div>
         <div></div>
       </div>
-      <p>Loading Model (248M) <font id="progress"></font></p>
-      <p class="tip">This may take a few minutes, depending on your network. You can check the progress in the console.</p>
+      <p>Loading Model<font id="progress"></font></p>
+      <p class="tip">This may take a few minutes, depending on your network.</p>
   </div>
   <div class="content">
     <label for="file" class="file-lable">
@@ -23,7 +29,7 @@
         <span class="upload-img">Try your own picture</span>
     </label>
     <div id="img-box">
-      <img  src="" id="img" />
+      <img  src="/images/5.jpg" id="img" />
       <div id="rect-box"></div>
     </div>
     <ul class="examples">
