feat: Support tfjs v1.0

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <p>Loading Model<font id="progress"></font></p>
       <p class="tip">This may take a few minutes, depending on your network.</p>
   </div>
-  <div class="content">
+  <div class="content" style="display: none">
     <label for="file" class="file-lable">
         <input accept="image/*" type="file" name="file" id="file" style="display: none;">
         <span class="upload-img">Try your own picture</span>
