--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </ul>
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.0.0/dist/tf.min.js"></script>
   <script src="./dist/index.bundle.js"></script>
 </body>
 </html>
